--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-webapp</artifactId>
   <version>1.0-SCloudexampleLOUDEXAPMPLE</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <name>my-webapp Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
